# zoopla-bridge

./: .flake8  Dockerfile  README.md  alembic.ini  docker-compose.yml  example.json  makefile  pyproject.toml  test.json
.github/workflows/: main.yaml
bridge_template/: app.py
bridge_template/api/: search_view.py
bridge_template/service/: health_service.py  search_service.py
bridge_template/service/example/: config.py
functional_tests/: config.py  conftest.py  test_health.py  test_search.py  test_search_example.py  test_utils.py
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  ingress.yaml  initialization.yaml
migrations/: env.py
migrations/versions/: 663c218a16e1_init.py
openapi/: openapi.yaml
service_template/: app.py  common.py  db.py  models.py
service_template/repository/: health_repo.py
service_template/service/: health_service.py
zoopla_bridge/: app.py  search_setup.py
zoopla_bridge/api/: health_view.py  search_view.py
zoopla_bridge/service/: common.py  search_service.py
zoopla_bridge/service/properties/: config.py  example.py
zoopla_bridge/service/property/: config.py  test.json
