[tool.poetry]
name = "zoopla-bridge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
requests = "^2.25.1"
pytest = "^6.2.2"
openapi-core = "^0.13.7"
PyYAML = "^5.4.1"
gunicorn = "^20.0.4"
flake8 = "^3.8.4"
AWS-OpenAPI-Lint = "^0.2.2"
isort = "^5.7.0"
autoflake = "^1.4"
pydantic = "^1.8.2"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
experimental-string-processing = true
